--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 
 .form-register .botton{
     width: 100%;
-    background-color: #1155af;
+    background-color: #1db9b6;
     border: none;
     border-radius: 4px;
     padding:16px;
