--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .form-register{
     width: 340px;
-    height: 620px;
+    height: 640px;
     background: #24303c;
     padding: 20px;
     margin: auto;
@@ -23,6 +23,9 @@
     text-align: center;
 }
 
+.form-register bold{
+    color: #1db9b6;
+}
 .controls{
     width: 100%;
     background: #24303c;
@@ -42,6 +45,7 @@
     height: 30px;
     text-align: center;
     font-size: 18px;
+    margin-bottom: 20px;
 }
 
 .form-register a{
